--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-inline-css": "^3.1.0",
+    "gulp-inline-source": "^3.1.0",
     "gulp-sass": "^3.1.0",
     "inky": "^1.3.7"
   }
